ui.frontend/src/main/webpack/etisalat/styles/custom-components/footer/footer.scss
/* ... */
.footer-links-logo-section .copyright {
	text-align: center;
	color: $steel-grey;
	font-size: 12px;
	line-height: 1.2;
	
}

@media (min-width:992px) {
	.footer-links-logo-section .copyright {
		display: none
	}
}

.footer-links-logo-section .copyright.desktop {
	display: none
}

@media (min-width:992px) {
	.footer-links-logo-section .copyright.desktop {
		display: block;
		text-align: left
	}
}

.footer-links-logo-section .social-links-section {
	margin-bottom: 1rem
}
[lang=ar] [dir=rtl] .footer-links-logo-section {
	margin-bottom: 1.5rem
}

.footer-links-logo-section .footer-links-nav li {
  @include rtlBlock() {
    &:first-child {
      a {
        padding-right: 0;
        margin-right: 0;
        border-right: 0;
      }
    }

    &:last-child {
      a {
        padding-right: toRem(24);
        margin-right: toRem(24);
        border-right: toRem(1) solid $white-2;
      }
    }
  }
}

[lang=ar] [dir=rtl] .footer-links-logo-section li:last-child a {
	padding-right: 0;
	margin-right: 0;
	border-left: none
}

[lang=ar] [dir=rtl] .footer-links-logo-section .flex-container .footer-links-nav {
	text-align: right
}

@media (max-width:991px) {
	.footer-links-logo-section .footer-links-nav li a {
		font-size: .75rem;
		padding-right: 1rem;
		margin-right: 1rem
	}

	.footer-links-logo-section .flex-container .footer-links-nav {
		margin-bottom: toRem(20);
		margin-top: toRem(52);
	}
}

.footer-one-liner {
	bottom: 0;
	width: 100%;
	position: fixed;
	z-index: -1
}

.footer-one-liner:before {
	content: "";
	background: url(/b2c/eshopApp/assets/img/buy-get/Icons/SVG/icon-close-grey.svg) no-repeat;
	background-size: contain;
	height: 360px;
	position: absolute;
	width: 340px;
	opacity: .1;
	z-index: -1;
	right: 0;
	transform: rotate(180deg);
	bottom: 0
}

.footer-text {
	background: $white;
	color: $steel-grey;
	font-size: 14px;
	text-align: center;
	position: fixed;
	width: 100%;
	bottom: 0
}

.footer-text p {
	margin-bottom: 0
}

.footer-black {
	box-shadow: 0 -2px 4px 0 rgba(0, 0, 0, .15);
	background-color: #242424;
	padding: 13px 0
}

.footer-wrapper {
	display: -ms-flexbox;
	display: flex;
	-ms-flex-pack: justify;
	justify-content: space-between
}

@media (max-width:767px) {
	.footer-wrapper {
		-ms-flex-direction: column;
		flex-direction: column
	}
}

.footer-wrapper .action {
	display: -ms-flexbox;
	display: flex;
	-ms-flex-align: center;
	align-items: center
}

@media (max-width:991px) {
	.footer-wrapper .action {
		-ms-flex-direction: column;
		flex-direction: column
	}
}

@media (max-width:991px) {
	.footer-wrapper .action .action-text {
		-ms-flex-order: 2;
		order: 2;
		width: 100%
	}
}

.footer-wrapper .action .action-text span {
	color: $white
}

.footer-wrapper .action .action-btn {
	margin-left: 1rem
}

@media (max-width:767px) {
	.footer-wrapper .action .action-btn {
		margin-bottom: 1rem
	}
}

@media (max-width:991px) {
	.footer-wrapper .action .action-btn {
		-ms-flex-order: 1;
		order: 1;
		margin-left: 0;
		width: 100%
	}
}

.footer-wrapper .action .action-btn a.btn {
	width: 100%
}

@media (min-width:768px) {
	.footer-wrapper .action .action-btn a.btn {
		width: 232px
	}
}

@media (max-width:767px) {
	.footer-wrapper .price-wrapper {
		margin-bottom: 1rem
	}
}

.footer-wrapper .price-wrapper .price,
.footer-wrapper .price-wrapper .small {
	color: $white
}

.footer-wrapper .price-wrapper .small {
	font-size: 10px;
	line-height: 1.2
}

@media (min-width:768px) {
	.footer-wrapper .price-wrapper .small {
		font-size: 12px;
		line-height: 1.33
	}
}

.footer-wrapper .price-wrapper .small.vat {
	font-size: 12px;
	line-height: 1.33;
	@include font-family-Neotech-ge;
}

@media (min-width:768px) {
	.footer-wrapper .price-wrapper .small.vat {
		font-size: 14px;
		line-height: 1.43
	}
}

.footer-wrapper .price-wrapper .price {
	font-size: 26px;
	line-height: 1.23;
	-ms-flex-align: baseline;
	align-items: baseline
}

@media (min-width:768px) {
	.footer-wrapper .price-wrapper .price {
		font-size: 36px;
		line-height: 1.28
	}
}

[lang=ar] [dir=rtl] .footer-wrapper .action .action-btn {
	margin-left: 0;
	margin-right: 1rem
}

[lang=ar] [dir=rtl] .footer-wrapper .price-wrapper .price {
	direction: rtl
}

.footer-heading {
	font-size: 12px;
	letter-spacing: 1.6px;
	text-transform: uppercase;
	margin-bottom: 12px
}

@media (min-width:992px) {
	.footer-heading {
		font-size: 20px;
		font-weight: 700;
		letter-spacing: 0;
		margin-bottom: 16px;
		text-transform: none
	}
}

@media (max-width:991px) {
	.download-etisalat {
		margin-bottom: 24px
	}
	.download-etisalat .footer-heading {
		display: none
	}
}
@media (max-width:991px) {
	.follow-etisalat {
		margin-bottom: 24px
	}
	.follow-etisalat .footer-heading {
		display: none
	}
}

@media (max-width:991px) {
	.payment-etisalat .footer-heading {
		margin-bottom: 4px!important;
		text-align: center
	}
	.needhelp-etisalat .footer-heading {
		margin-bottom: 4px!important;
		text-align: center
	}
	.needhelp-etisalat {
		margin-bottom: 24px
	}
	.needhelp-etisalat .help-content {
		text-align: center
	}
}
.footer-social-dwonload {
	margin-top: 10px
}

@media (min-width:992px) {
	.footer-social-dwonload {
		margin-top: 0;
		display: -ms-flexbox;
		display: flex;
		-ms-flex-pack: justify;
		justify-content: space-between
	}
	.needhelp-etisalat .help-content {
		font-size: 16px;
		line-height: 1.25;
		letter-spacing: .57px;
		margin-top: 11px
	}
}

@media screen and (max-width:1247px) and (min-width:992px) {
	.footer-social-dwonload {
		-ms-flex-wrap: wrap;
		flex-wrap: wrap
	}
	.follow-etisalat,
	.needhelp-etisalat,
	.payment-etisalat {
		width: 50%;
		-ms-flex-positive: 1;
		flex-grow: 1
	}
	.follow-etisalat,
	.payment-etisalat {
		margin-top: 40px
	}
}
.action-btn {
	display: -ms-flexbox;
	display: flex;
	-ms-flex-align: center;
	align-items: center
}

.action-btn svg {
	width: 50px;
	height: 30px
}

.action-btn a {
	color: #353738;
	text-transform: uppercase;
	font-size: .875rem;
	letter-spacing: 2px
}
/* ... */

