bugfix/ETSL-607 changes for alignement also 470 alignement issue

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/footer/footer.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/footer/footer.scss
@@ -1192,8 +1192,6 @@
 }
 
 [lang=ar] [dir=rtl] .footer-links-logo-section li:last-child a {
-	padding-right: 0;
-	margin-right: 0;
 	border-left: none
 }
 
